minor: 1.18.1 support